Fixing hero actions text alignment

--- a/frontendmentor/bookmark-landing-page/styles/output.css
+++ b/frontendmentor/bookmark-landing-page/styles/output.css
@@ -817,6 +817,7 @@ body {
   display: flex;
   justify-content: center;
   gap: calc(var(--spacing) * 2);
+  text-align: center;
   @media (width >= 48rem) {
     justify-content: flex-start;
   }
